# Fast-API-Tutorial-Mini-Projects

./: Path-query-ass.py  Request_body.py  main.py  pyproject.toml  test.py
Vehicle_inventory/: models.py
recipe_app/: main.py
restuarant_search/: main.py  restuarant.json  routes.py  services.py
