[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = "first project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
pytest = "^8.1.1"
pydantic-extra-types = "^2.6.0"
coverage = "^7.4.4"
phonenumbers = "^8.13.33"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
